[package]
name = "stm32f1-examples"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.8"
panic-rtt-target = {version = "0.1.1", features = ["cortex-m"]}
rtt-target = {version = "0.3", features = ["cortex-m"]}
stm32f1xx-hal = {version = "0.7", features = ["rt", "stm32f103", "medium"]}
smart-leds = "0.3.0"
ws2812-spi = "0.2.0"
